fix: Aligning button and icons

--- a/src/components/Share.scss
+++ b/src/components/Share.scss
@@ -28,6 +28,7 @@ $brand-colors: (
     background-color: #282c35;
     border-width: 1px;
     cursor: pointer;
+    display: flex;
     justify-content: center;
     padding: calc(0.375em - 1px) 0.75em;
     text-align: center;
@@ -50,5 +51,15 @@ $brand-colors: (
         }
       }   
     }
-  }
+
+ 
+    
+    span {
+      display: flex;
+      flex: 1;
+      margin-right: 4px;
+      justify-content: center;
+      align-items: center;
+    }
+  } 
 }
